--- a/index.html
+++ b/index.html
@@ -14,6 +14,52 @@
 
 <body>
 
+  <!-- Header Start -->
+  <header class="w-full bg-transparent absolute z-10 top-0 left-0 flex items-center transition duration-300">
+    <div class="container">
+      <div class="flex items-center justify-between relative">
+        <!-- left -->
+        <div class="px-4">
+          <a href="#home" class="font-bold text-lg text-primary block py-6">TailwindCSS</a>
+        </div>
+        <!-- Right -->
+        <div class="px-4 flex items-center">
+          <button type="button" id="hamburger" name="hamburger" class="block absolute right-4 lg:hidden">
+            <span class="hamburger-line origin-top-left transition duration-300 ease-in-out"></span>
+            <span class="hamburger-line transition duration-300 ease-in-out"></span>
+            <span class="hamburger-line origin-bottom-left transition duration-300 ease-in-out"></span>
+          </button>
+
+          <nav id="nav-menu"
+            class="hidden absolute py-5 top-full right-4 bg-white lg:bg-transparent shadow-lg lg:shadow-none rounded-lg lg:rounded-none w-full max-w-[250px] lg:max-w-full lg:block lg:static ">
+            <ul class="block lg:flex">
+              <li class="group">
+                <a href="#home" class="text-base text-dark py-2 mx-8 flex group-hover:text-primary">Beranda</a>
+              </li>
+              <li class="group">
+                <a href="#about" class="text-base text-dark py-2 mx-8 flex group-hover:text-primary">Tentang Saya</a>
+              </li>
+              <li class="group">
+                <a href="#portfolio" class="text-base text-dark py-2 mx-8 flex group-hover:text-primary">Portfolio</a>
+              </li>
+              <li class="group">
+                <a href="#clients" class="text-base text-dark py-2 mx-8 flex group-hover:text-primary">Clients</a>
+              </li>
+              <li class="group">
+                <a href="#blog" class="text-base text-dark py-2 mx-8 flex group-hover:text-primary">Blog</a>
+              </li>
+              <li class="group">
+                <a href="#contact" class="text-base text-dark py-2 mx-8 flex group-hover:text-primary">Contact</a>
+              </li>
+            </ul>
+          </nav>
+
+        </div>
+      </div>
+    </div>
+  </header>
+  <!-- Header End -->
+
   <!-- Hero Section Start -->
   <section id="home" class="pt-36">
     <div class="container">
@@ -71,8 +117,8 @@
         </div>
 
         <div class="w-full px-4 lg:w-1/2">
-          <h3 class="font-semibold text-dark lg:text-3xl text-2xl mb-4 lg:pt-10">Mari berteman</h3>
-          <p class="font-medium lg:text-lg text-base text-secondary mb-6">
+          <h3 class="font-semibold text-dark lg:text-3xl text-2xl mb-4 lg:pt-10">Profil</h3>
+          <p class="font-medium lg:text-lg text-base text-secondary mb-6 max-w-xl">
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit distinctio veritatis, quibusdam at maiores
             deleniti error facilis odio.
           </p>
@@ -135,6 +181,8 @@
     </div>
   </section>
   <!-- About Section End -->
+
+  <script src="dist/js/script.js"></script>
 
 </body>
 
